--- a/resources/assets/sass/bourbon/addons/_buttons.scss
+++ b/resources/assets/sass/bourbon/addons/_buttons.scss
@@ -49,6 +49,7 @@
 /// @todo Remove double assigned variables (Lines 59–62) in v5.0.0
 
 $buttons-list: 'button',
+               'a.button',
                'input[type="button"]',
                'input[type="reset"]',
                'input[type="submit"]';
