fix log button display - add titles to links

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -95,6 +95,11 @@ tr:nth-child(even) {
 div.email-logs {
     @include span-columns(12);
     @include shift(0);
+    table {
+        .button {
+            padding: .5em;
+        }
+    }
 
 }
 div.email-addresses, div.email-addresses-hero {
