--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,7 +20,7 @@ tr:nth-child(even) {
 
 }
 .pagination-container {
-    @include span-columns(10);
+    @include span-columns(12);
     text-align: center;
 }
 #{$all-buttons} {
@@ -96,6 +96,18 @@ div.email-logs {
     @include span-columns(12);
     @include shift(0);
     table {
+        .button-column {
+
+        }
+        td {
+            padding-left: 5px;
+            padding-right: 5px;
+            text-overflow: ellipsis;
+            overflow-x: hidden;
+            &:not(.button) {
+                font-size: .9em;
+            }
+        }
         .button {
             padding: .5em;
         }
