--- a/resources/assets/sass/pages/api-docs.scss
+++ b/resources/assets/sass/pages/api-docs.scss
@@ -51,7 +51,7 @@ div.api-docs {
         padding-left: 20px;
         line-height: 2em;
     }
-    pre {
+    pre, xmp {
         line-height: 1em;
         padding: 20px;
         border-radius: 10px;
