Improved error handling and rendering

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,7 @@
 @import "components/badges";
 @import "components/pagination";
 @import "pages/api-docs";
+@import "pages/error";
 
 @import "variables";
 
