--- a/resources/assets/sass/pages/auth.scss
+++ b/resources/assets/sass/pages/auth.scss
@@ -1,5 +1,4 @@
 .auth-form-container {
-    margin-top: 50px;
     @include span-columns(6);
     @include shift(3);
 
@@ -7,5 +6,9 @@
         @include span-columns(12);
         @include shift(0);
     }      
+    .flex-box {
+        padding: 1em 2em 1em 2em;        
+        margin-bottom: 30px;
+    }
 }
 
