--- a/resources/assets/sass/components/secure-header.scss
+++ b/resources/assets/sass/components/secure-header.scss
@@ -1,5 +1,8 @@
 @import "../variables";
 header.secure-navigation {
+    position: abolute;
+    top: 0;
+    left: 0;
     .nav-link.active a{
         background-color: darken($blue-300,5%);
         padding-left: 1em;        
@@ -341,7 +344,6 @@ $refills-max-width: 100%;
 
         img {
           height: 12px;
-          opacity: 0.7;
           padding: 1px;
         }
       }
