--- a/resources/assets/sass/components/secure-header.scss
+++ b/resources/assets/sass/components/secure-header.scss
@@ -1,6 +1,6 @@
 @import "../variables";
 header.secure-navigation {
-    position: abolute;
+    position: absolute;
     top: 0;
     left: 0;
     .nav-link.active a{
