--- a/resources/assets/sass/components/insecure-header.scss
+++ b/resources/assets/sass/components/insecure-header.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 
 .centered-navigation {
-    position: abolute;
+    position: absolute;
     top: 0;
     left: 0;
   $base-border-radius: 3px !default;
