Account password management

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import "components/insecure-header";
 @import "components/secure-header";
 @import "components/footer";
+@import "pages/account";
 @import "pages/api-docs";
 @import "pages/terms";
 @import "pages/error";
