--- a/resources/assets/sass/pages/home.scss
+++ b/resources/assets/sass/pages/home.scss
@@ -1,4 +1,17 @@
 @import "../variables";
+.github-ribbon {
+    display: none;
+    @include media(min-width 800px) {
+        display: inline;
+    }        
+    img {
+        position: absolute; 
+        top: 0; 
+        right: 0; 
+        border: 0;
+        z-index: 999        
+    }
+}
 .home {
     @include span-columns(8);
     @include shift(2);
